# jepa-ctrl

./: .gitignore  LOOP_PROMPT.md  README.md  STATUS.md  progress.md  pyproject.toml  requirements.txt
jepa_ctrl/: __init__.py  cli.py  collapse_stats.py  config.py  controllers.py  envs.py  evaluate.py  metrics.py  pixel_env.py  pixels.py  render.py  seeding.py
jepa_ctrl/model/: __init__.py  buffer.py  config.py  jepa_controller.py  mppi.py  nets.py  sigreg.py  simnorm.py  trainer.py  world_model.py
scripts/: collapse_eval.py  collapse_rate.py  diag_dof.py  r15_collapse.py  r15_train.sh  r17_probe.sh  r17_redteam.py  r17_train.sh  r18_calib.py  r18_run.sh  r19_campaign.sh  r19_leg3.sh  r19_leg4.sh  r20_canary.sh  r20_diag.sh  r20_mask_eyeson.py  r21_goal_eval.py  r22_quasimetric.py  r25_groundless_broaden.sh  train.py
tests/: test_collapse_stats.py  test_controllers.py  test_disagreement.py  test_ensemble.py  test_envs.py  test_evaluate.py  test_groundless.py  test_metrics.py  test_model_core.py  test_model_grounding.py  test_model_plan.py  test_pixels.py  test_recon.py  test_reset_curriculum.py  test_train_cli.py  test_trainer_schedule.py
